[gd_scene load_steps=14 format=3 uid="uid://b43px2v1xgjy8"]

[ext_resource type="PackedScene" uid="uid://do2px6nbfh7yf" path="res://Scenes/bola.tscn" id="1_jjgbg"]
[ext_resource type="Script" uid="uid://cv8mxfrvtgfxw" path="res://Scripts/GameManager.gd" id="2_bo1nx"]
[ext_resource type="Script" uid="uid://bq5xpqdpdqtkh" path="res://Scripts/enemy_spawner.gd" id="3_8gbba"]
[ext_resource type="PackedScene" uid="uid://ue8rr4rufbfd" path="res://Scenes/Enemy.tscn" id="4_jjvhh"]
[ext_resource type="Script" uid="uid://b50hg5h3v50sf" path="res://Scripts/powerupspawner.gd" id="5_kry3j"]
[ext_resource type="PackedScene" uid="uid://ch10bav4abg2f" path="res://Scenes/PowerUp.tscn" id="6_21xkr"]
[ext_resource type="PackedScene" uid="uid://bvbp0wgpywmay" path="res://Scenes/ShieldPowerUp.tscn" id="6b_shield"]
[ext_resource type="Script" uid="uid://cup7hkytgme57" path="res://Scripts/laser_spawner.gd" id="7_laser_spawner"]
[ext_resource type="PackedScene" uid="uid://c8x7v2k3n4m5p" path="res://Scenes/Laser.tscn" id="8_laser"]
[ext_resource type="Script" uid="uid://bd5r55ru5xrf0" path="res://Scripts/misil_spawner.gd" id="9_misil_spawner"]
[ext_resource type="PackedScene" uid="uid://bq8xr5m2n3k4p" path="res://Scenes/Misil.tscn" id="10_misil"]
[ext_resource type="Script" uid="uid://ce6s66sv6ysg1" path="res://Scripts/ProgressionManager.gd" id="11_progression"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo1nx"]
size = Vector2(50, 2000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8gbba"]
size = Vector2(50, 2000)

[node name="Main" type="Node2D"]

[node name="Bola" parent="." instance=ExtResource("1_jjgbg")]
position = Vector2(307, 55)
upward_force = 750.0
side_force = 600.0
gravity = 1200.0
max_speed = 900.0
wall_bounce = 1.5
min_bounce_speed = 150.0

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("bola", "start_label", "enemy_spawner", "powerup_spawner", "laser_spawner", "misil_spawner", "progression_manager", "score_label", "attack_power_label")]
script = ExtResource("2_bo1nx")
bola = NodePath("../Bola")
start_label = NodePath("../CanvasLayer/UI/StartLabel")
enemy_spawner = NodePath("../EnemySpawner")
powerup_spawner = NodePath("../PowerUpSpawner")
laser_spawner = NodePath("../LaserSpawner")
misil_spawner = NodePath("../MisilSpawner")
progression_manager = NodePath("../ProgressionManager")
score_label = NodePath("../CanvasLayer/UI/ScoreLabel")
attack_power_label = NodePath("../CanvasLayer/UI/AttackPowerLabel")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 457.0
offset_top = 295.0
offset_right = 569.0
offset_bottom = 318.0
text = "Tap to Start!"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
text = "Score: 0"
vertical_alignment = 1

[node name="AttackPowerLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 50.0
offset_top = 55.0
offset_right = 200.0
offset_bottom = 85.0
text = "Power: 5"
vertical_alignment = 1

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2(6, 1)
shape = SubResource("RectangleShape2D_bo1nx")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(1154, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_8gbba")

[node name="EnemySpawner" type="Node2D" parent="."]
position = Vector2(1071, 288)
script = ExtResource("3_8gbba")
enemy_scene = ExtResource("4_jjvhh")

[node name="Timer" type="Timer" parent="EnemySpawner"]
wait_time = 2.0
autostart = true

[node name="PowerUpSpawner" type="Node2D" parent="."]
position = Vector2(129, 3)
script = ExtResource("5_kry3j")
powerup_scene = ExtResource("6_21xkr")
shield_powerup_scene = ExtResource("6b_shield")
shield_spawn_chance = 0.25

[node name="Timer" type="Timer" parent="PowerUpSpawner"]
wait_time = 10.0
autostart = true

[node name="LaserSpawner" type="Node2D" parent="."]
script = ExtResource("7_laser_spawner")
laser_scene = ExtResource("8_laser")

[node name="Timer" type="Timer" parent="LaserSpawner"]
wait_time = 10.0

[node name="MisilSpawner" type="Node2D" parent="."]
script = ExtResource("9_misil_spawner")
misil_scene = ExtResource("10_misil")

[node name="Timer" type="Timer" parent="MisilSpawner"]
wait_time = 5.0

[node name="ProgressionManager" type="Node" parent="." node_paths=PackedStringArray("enemy_spawner", "laser_spawner", "misil_spawner", "bola")]
script = ExtResource("11_progression")
enemy_spawner = NodePath("../EnemySpawner")
laser_spawner = NodePath("../LaserSpawner")
misil_spawner = NodePath("../MisilSpawner")
bola = NodePath("../Bola")
